# Labwork-12CPP

./: CMakeLists.txt
lib/: CMakeLists.txt  Column.cpp  JOIN_METHODS.cpp  MyCoolDB.cpp  MyCoolDB.h  SEND_REQUEST.cpp  Table.cpp
tests/: CMakeLists.txt  Drop_test.cpp  Insert_test.cpp  Join_test.cpp  Reference_and_Delete_test.cpp  Update_test.cpp
